tekton-install/resources/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: tekton-pipelines
  labels:
    app: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/component: oauth2-proxy
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/giantswarm/oauth2_proxy:v5.1.0
        imagePullPolicy: IfNotPresent
        args:
        - --provider=github
        - --github-org=giantswarm
        - --github-team=employees
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 20M
          requests:
            cpu: 50m
            memory: 20M

---

apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: tekton-pipelines
  labels:
    app: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/component: oauth2-proxy
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-dashboard
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
